<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Invite"
        android:orderInCategory="100"
        android:title="@string/action_invite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Call"
        android:orderInCategory="100"
        android:title="@string/action_call"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_LOGOUT"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:visible="true"
        app:showAsAction="never" />





</menu>
